# libanti

./: Cargo.toml  README.md
assets/: deptrace.c
examples/: 01-ptrace-single.rs  03-ptrace-offset.rs  04-dynamic-ptrace.rs  04-ptrace-dynamic.rs  04-ptrace-syscall.rs  05-ptrace-syscall.rs  05-syscall-ptrace.rs  detect-debug.rs  detect-preload.rs  detect-virt.rs  preloaded-proc.rs  preloaded.rs  ptrace1.rs  ptrace2.rs  tracer-pid.rs
src/: error.rs  lib.rs  utils.rs  virt.rs
src/detect/: debug.rs  mod.rs  preload.rs  ptrace.rs  virt.rs
