[package]
name = "libanti"
authors = ["dustyw0lf"]
version = "0.1.0"
edition = "2021"
description = "Anti reversing techniques for Linux"
repository = "https://github.com/dustyw0lf/libanti"
keywords = ["linux"]
include = ["src", "Cargo.toml", "README.md"]

[dependencies]
libc = "0.2.167"
litcrypt = "0.3.0"
raw-cpuid = "11.2.0"
